Bug 376607 - Sort List by piece count does not work
Summary: Sort List by piece count does not work
Status: RESOLVED FIXED
Alias: None
Product: palapeli
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Stefan Majewsky
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-18 10:35 UTC by Chris Chittleborough
Modified: 2017-08-31 18:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Chittleborough 2017-02-18 10:35:18 UTC
The collection view has a drop down menu allowing you to sort the collection "by title" or "by piece count". Only the first of these works.
Comment 1 Christian Ehrlicher 2017-08-31 18:16:53 UTC
Git commit ff8c4635720b4c758167ee6beeffd903a89a489f by Christian Ehrlicher.
Committed on 31/08/2017 at 18:05.
Pushed by chehrlic into branch 'frameworks'.

Sort List by piece count does not work

Summary:
The sorting in the overview dialog did not work because the
QSortFilterProxyModel was not set up correctly

Test Plan:
Test if the sorting works by selecting the appropriate sorting

Reviewers: #kde_games, ltoscano

Reviewed By: ltoscano

Subscribers: ltoscano, #kde_games

Differential Revision: https://phabricator.kde.org/D7578

M  +5    -2    src/file-io/collection-view.cpp

https://commits.kde.org/palapeli/ff8c4635720b4c758167ee6beeffd903a89a489f
Comment 2 Christian Ehrlicher 2017-08-31 18:20:34 UTC
Git commit 2a78d0bd8b5a8a3b326046231edab1570c21176b by Christian Ehrlicher.
Committed on 31/08/2017 at 18:08.
Pushed by chehrlic into branch 'master'.

Sort List by piece count does not work

Summary:
The sorting in the overview dialog did not work because the
QSortFilterProxyModel was not set up correctly

Test Plan:
Test if the sorting works by selecting the appropriate sorting

Reviewers: #kde_games, ltoscano

Reviewed By: ltoscano

Subscribers: ltoscano, #kde_games

Differential Revision: https://phabricator.kde.org/D7578

M  +5    -2    src/file-io/collection-view.cpp

https://commits.kde.org/palapeli/2a78d0bd8b5a8a3b326046231edab1570c21176b
Comment 3 Luigi Toscano 2017-08-31 18:25:01 UTC
Git commit 4f6d95e54f40e60abc4c39a7d3893105df31cc9c by Luigi Toscano, on behalf of Christian Ehrlicher.
Committed on 31/08/2017 at 18:24.
Pushed by ltoscano into branch 'Applications/17.08'.

Sort List by piece count does not work

Summary:
The sorting in the overview dialog did not work because the
QSortFilterProxyModel was not set up correctly

Test Plan:
Test if the sorting works by selecting the appropriate sorting

Reviewers: #kde_games, ltoscano

Reviewed By: ltoscano

Subscribers: ltoscano, #kde_games

Differential Revision: https://phabricator.kde.org/D7578

(cherry picked from commit 2a78d0bd8b5a8a3b326046231edab1570c21176b)

M  +5    -2    src/file-io/collection-view.cpp

https://commits.kde.org/palapeli/4f6d95e54f40e60abc4c39a7d3893105df31cc9c