Sort List by piece count does not work

Summary:
The sorting in the overview dialog did not work because the
QSortFilterProxyModel was not set up correctly

BUG: 376607

Test Plan:
Test if the sorting works by selecting the appropriate sorting

Reviewers: #kde_games, ltoscano

Reviewed By: ltoscano

Subscribers: ltoscano, #kde_games

Differential Revision: https://phabricator.kde.org/D7578